# todo_restfulapi

./: .gitignore  Makefile  alembic.ini  pyproject.toml  setup.cfg
migrations/versions/: 47f9486dfa95_create_tables.py
task_manager/: admin.py  app.py  db.py  main.py  mig.py
task_manager/app/: __init__.py
task_manager/config/: __init__.py  base.py
task_manager/migrations/: env.py
task_manager/migrations/versions/: 77bb58cea32b_.py  827f9aaf9e2b_.py  a5afe1932db5_.py  c03c4fc6e5e2_.py  f1c8fe4e36ad_.py  fbb5263b9e03_.py
task_manager/models/: __init__.py  roles.py  statuses.py  tasks.py  users.py
task_manager/repositories/: __init__.py  role_repository.py  status_repository.py  task_repository.py  user_repository.py
task_manager/routes/: admin_routes.py  auth.py  home_routes.py  tasks_routes.py  users_routes.py
task_manager/routes/forms/: task_forms.py  user_forms.py
task_manager/routes/schemas/: task.py  user.py
task_manager/routes/templates/: base.html  footer.html  index.html
task_manager/routes/templates/tasks/: create_task.html  show_task_data.html  show_tasks.html  update_task.html
task_manager/routes/templates/users/: email_confirmation.html  login.html  profile.html  registration.html  update_user.html
task_manager/services/: __init__.py  role_service.py  status_service.py  task_service.py  user_service.py
tests/tests_tasks/: repo_tasks_test.py
